TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Improved socket performance (would be nice if we could be used as a "hub")
 * Fix depend onservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2011-06-27 MickeM
 * Fixed issue where parsers and () which was broken
 * Made most keywords in the where parser case insensitive so NOT and not as well as AND and AnD should now all work
 * Changed so unredable processes are debug messages (as modern windows usualy always has a few)

2011-06-14 MickeM - 0.3.9 rc2
 * Fixed issue with performance data in memory check

2011-06-13 MickeM - 0.3.9 rc2
 * Fixed some issues with CheckFiles
 * Added regexp matching to all string filters
   like so: "filter=message regexp '.*MICKEM-LAPTOP.*'" 
   CheckEventLog file=application file=system MaxWarn=1 MaxCrit=1 "filter=generated gt -2d AND message regexp '.*MICKEM-LAPTOP.*'" truncate=800 unique descriptions "syntax=%severity%: %source%: %message% (%count%)"
 * Fixed issue with errant "dot" in the performance data (I really hate performance data)

2011-05-20 MickeM
 * Added new option to CheckprocState (ignore-state) to ignore any state checks (usefull for checking MaxCount when 0 is an option)
 * Fixed performance data for process checks.
 * Fixed error message for the op5 sales people

2011-04-01 MickeM
 * Fixed (finally!!) the NSCA issue with multiple commands and missing "data"

2011-03-24 MickeM
 * Added check_updates.vbs script
 * Added a lot of useful(?) aliases

2011-03-22 MickeM
 * Added magic modifier (shamelessly stolen from check_mk) to CheckDriveSize

2011-03-17 MickeM
 * Added proper volume support to CheckDriveSize

2011-03-15 MickeM
 * Added suport for delayed start to service check (default ignored)
 * Added new option to CheckDriveSize ignore-unreadable which will ignore checking any unreadable disk drive.

2011-02-16 MickeM