@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,9,315
-#define PRODUCTVER     0,3,9,315
-#define STRFILEVER     _T("0.3.9.315")
-#define STRPRODUCTVER  _T("0.3.9.315")
-#define STRPRODUCTDATE  _T("2011-06-27")
+#define FILEVER        0,3,9,322
+#define PRODUCTVER     0,3,9,322
+#define STRFILEVER     _T("0.3.9.322")
+#define STRPRODUCTVER  _T("0.3.9.322")
+#define STRPRODUCTDATE  _T("2011-07-04")
 #endif // AUTOBUILD_H
