@@ -1868,6 +1868,78 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 		</Filter>
+		<Filter
+			Name="filter"
+			>
+			<File
+				RelativePath="..\..\include\parsers\ast.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\ast_bind.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\ast_static_eval.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\ast_type_inference.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\ast_visitors.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\expression_ast.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\expression_ast_impl.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\grammar\grammar.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\grammar\grammar_impl.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\list_value.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\operators.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\operators_impl.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\unary_fun.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\variable.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where\varible_handler.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\parsers\where_parser.hpp"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath=".\ReadMe.txt"
 			>
